--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:targetSdkVersion="26"/>
 
     <application
-        android:label="@string/device_settings_app_name"
+        android:label="Samsung Doze"
         android:persistent="true">
 
         <receiver android:name=".BootCompletedReceiver">
@@ -33,7 +33,7 @@
 
         <activity
             android:name=".SamsungDozeActivity"
-            android:label="@string/ambient_display_title"
+            android:label="Doze"
             android:theme="@style/Theme.Main">
             <intent-filter>
                 <action android:name="com.android.settings.device.DOZE_SETTINGS" />
